fixed issue where footer was not placed proportionally to nav unless overflowing

--- a/application/static/css/style.css
+++ b/application/static/css/style.css
@@ -260,6 +260,7 @@ ul::-webkit-scrollbar-thumb {
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
+  flex-grow: 1;
   box-sizing: border-box;
   margin: 0;
   padding: 5px 0;
